--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,10 +19,6 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: read
-      packages: write
-
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-java@v4
@@ -32,7 +28,7 @@ jobs:
     - run: mvn -B package --file pom.xml
     - name: Get current date
       id: date
-      run: echo "::set-output name=date::$(date +'%Y.%m.%d.%H%M%S')"
+      run: echo "name=date::$(date +'%Y.%m.%d.%H%M%S')" >> $GITHUB_OUTPUT
     - name: Create tag
       uses: actions/github-script@v5
       with:
