--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,25 +25,34 @@ jobs:
       with:
         java-version: '21'
         distribution: 'temurin'
+
     - run: mvn -B package --file pom.xml
+
     - name: Get current date
       id: date
       run: echo "name=date::$(date +'%Y.%m.%d.%H%M%S')" >> $GITHUB_OUTPUT
-    - name: Create tag
-      uses: actions/github-script@v5
-      with:
-        script: |
-          github.rest.git.createRef({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            ref: 'refs/tags/${{ steps.date.outputs.date }}',
-            sha: context.sha
-          })
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: target/DuoUniversalKeycloakAuthenticator*
-        name: DuoUniversalKeycloakAuthenticator v${{ steps.date.outputs.date }}
-        tag_name: 'refs/tags/${{ steps.date.outputs.date }}'
+
+    - name: Get short commit hash
+      id: git_short_hash
+      run: echo "::set-output name=hash::$(git rev-parse --short HEAD)"
+
+    # Create a new tag based on the commit SHA
+    - name: Create Tag
+      id: create_tag
+      run: |
+        git tag v${{ steps.git_short_hash.outputs.hash }}
+        git push origin v${{ steps.git_short_hash.outputs.hash }}
+
+    # Create GitHub Release
+    - name: Create GitHub Release
+      id: create_release
+      uses: actions/create-release@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+      with:
+        tag_name: v${{ steps.git_short_hash.outputs.hash }}
+        release_name: Release v${{ steps.git_short_hash.outputs.hash }}
+        body: |
+          Release created automatically by GitHub Actions.
+        draft: false
+        prerelease: ${{ env.prerelease }}
