--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,6 @@
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
 
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
@@ -20,40 +15,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-
-    - run: mvn -B package --file pom.xml
-
-    #- name: Get current date
-      #id: date
-      #run: echo "name=date::$(date +'%Y.%m.%d.%H%M%S')" >> $GITHUB_OUTPUT
-
-    - name: Get short commit hash
-      id: git_short_hash
-      run: echo "name=hash::$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-
-    # Create a new tag based on the commit SHA
-    - name: Create Tag
-      id: create_tag
-      run: |
-        git tag v${{ steps.git_short_hash.outputs.hash }}
-        git push origin v${{ steps.git_short_hash.outputs.hash }}
-
-    # Create GitHub Release
-    - name: Create GitHub Release
-      id: create_release
-      uses: softprops/action-gh-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        files: target/DuoUniversalKeycloakAuthenticator*
-        tag_name: v${{ steps.git_short_hash.outputs.hash }}
-        release_name: Release v${{ steps.git_short_hash.outputs.hash }}
-        body: |
-          Release created automatically by GitHub Actions.
-        draft: false
-        prerelease: false
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y.%m.%d.%H%M%S')"
+      - name: Create tag
+        uses: actions/github-script@v5
+        with:
+          script: |
+            github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: 'refs/tags/${{ steps.date.outputs.date }}',
+              sha: context.sha
+            })
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: target/DuoUniversalKeycloakAuthenticator*.jar
+          name: Duo Universal Keycloak Authenticator v${{ steps.date.outputs.date }}
+          tag_name: 'refs/tags/${{ steps.date.outputs.date }}'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
