--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
+          cache: maven
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
@@ -31,7 +32,7 @@ jobs:
         run: echo "name=date::$(date +'%Y.%m.%d.%H%M%S')" >> $GITHUB_OUTPUT
 
       - name: Create tag
-        uses: actions/github-script@v4
+        uses: actions/github-script@v5
         with:
           script: |
             github.rest.git.createRef({
@@ -42,7 +43,7 @@ jobs:
             })
 
       - name: Release
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@v1
         with:
           files: target/DuoUniversalKeycloakAuthenticator*.jar
           name: Duo Universal Keycloak Authenticator v${{ steps.date.outputs.date }}
