--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,21 +16,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
           cache: maven
-
       - name: Build with Maven
         run: mvn -B package --file pom.xml
-
       - name: Get current date
         id: date
-        run: echo "name=date::$(date +'%Y.%m.%d.%H%M%S')" >> $GITHUB_OUTPUT
-
+        run: echo "::set-output name=date::$(date +'%Y.%m.%d.%H%M%S')"
       - name: Create tag
         uses: actions/github-script@v5
         with:
@@ -41,7 +37,6 @@ jobs:
               ref: 'refs/tags/${{ steps.date.outputs.date }}',
               sha: context.sha
             })
-
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
