--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,15 +29,13 @@ jobs:
 
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y.%m.%d.%H%M%S')"
+        run: echo "date=$(date +'%Y.%m.%d.%H%M%S')" >> $GITHUB_OUTPUT
 
       - name: Create tag
         uses: actions/github-script@v7
         with:
           script: |
             github.rest.git.createRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
               ref: 'refs/tags/${{ steps.date.outputs.date }}',
               sha: context.sha
             })
